--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</article>
 	<h2>Contact Me </h2>
 	<p>Discord : Uraz8008</p>
-	<p>Eposta: <a href="mailto:Uraz.kinik@gmail.com">Uraz.kinik@gmail.com /a></p>
+	<p>Eposta: <a href="mailto:Uraz.kinik@gmail.com">Uraz.kinik@gmail.com </a></p>
 	<p>Phone Num: +90 0 545 550 65 23</p>
 	<p>Location: Istanbul</p>
 </body>
